[package]
name = "blocksigner"
version = "2.4.0"
authors = ["Blockstream <support@blockstream.com>"]
description = "Liquid/Elements Blocksigner"
edition = "2024"

[[bin]]
name = "blocksigner"
path = "src/main.rs"

[dependencies]
azure_identity = "0.23.0"
azure_security_keyvault_secrets = "0.2.0"
eyre = "0.6.12"
tokio = "1.44.2"
toml = "0.5"

[dependencies.functionary_logs]
version = "2.4.0"
path = "../functionary_logs/"

[dependencies.functionary]
path = "../functionary"
